# docs/swagger.yaml
@@ -17,6 +17,13 @@ definitions:
       message:
         type: string
     type: object
+  handlers.NamespacesRequest:
+    properties:
+      clusters:
+        additionalProperties:
+          type: string
+        type: object
+    type: object
   handlers.responseError:
     properties:
       detail:
@@ -39,7 +46,7 @@ info:
   version: "1.0"
 paths:
   /graph/namespace/{namespace}/duration/{duration}/deadEdges/{deadEdges}/passThrough/{passThrough}:
-    get:
+    post:
       consumes:
       - application/json
       description: 通过namespace来查询流量视图
@@ -55,6 +62,12 @@ paths:
         name: duration
         required: true
         type: string
+      - description: 集群信息
+        in: body
+        name: cluster
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.NamespacesRequest'
       - description: 是否去掉没有流量的线
         in: path
         name: deadEdges
@@ -76,7 +89,7 @@ paths:
       tags:
       - graph
   /graph/namespace/{namespace}/service/{service}/duration/{duration}/deadEdges/{deadEdges}/passThrough/{passThrough}:
-    get:
+    post:
       consumes:
       - application/json
       description: 通过node来查询流量视图
@@ -92,6 +105,12 @@ paths:
         name: duration
         required: true
         type: string
+      - description: 集群信息
+        in: body
+        name: cluster
+        required: true
+        schema:
+          $ref: '#/definitions/handlers.NamespacesRequest'
       - description: service 名称
         in: path
         name: service
